# learning

./: .gitignore  README.md  Vagrantfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup-deps
daily-practice/: README.md  pyproject.toml
daily-practice/advent-of-code/day-1/: main.py
daily-practice/advent-of-code/day-2/: main.py
daily-practice/advent-of-code/day-3/: main.py
daily-practice/college/: first-100-primes.cpp  primes-till-num.cpp
daily-practice/leetcode/two-sum/: main.cpp  main.py  question.md
daily-practice/miscellaneous/hash-tables/: solution1.py
daily-practice/project-euler/: README.md
daily-practice/project-euler/problem-11/: main.py  question.md
daily-practice/project-euler/problem-12/: main.py  question.md
daily-practice/project-euler/problem-22/: main.cpp  main.py  question.md
daily-practice/speed-coding/hangman/: README.md  main.py  utils.py  words.txt
daily-practice/spoj/: README.md
daily-practice/spoj/BSEARCH1- Binary Search/: main.cpp  question.md
daily-practice/spoj/factorial/: main.py
daily-practice/spoj/prime-generator/: main.py
daily-practice/spoj/problem-1/: main.cpp  main.py
daily-practice/spoj/problem-2/: main.cpp  main.py  question.md  sieve.py
deep-learning/: README.md  pyproject.toml
deep-learning/brain_weight/: main.py
deep-learning/tests/: test_deep_learning.py
deep-learning/week_two/: broadcasting_in_python.ipynb  vectorization.ipynb
miscellaneous/convex-issue/: README.md  docker-compose.yml  package-lock.json  package.json
miscellaneous/convex-issue/convex/: chat.ts  convex.config.ts
miscellaneous/convex-issue/src/: App.tsx
miscellaneous/convex-tutorial/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
miscellaneous/railway-sample-app/: bun.lockb  index.ts  package.json
miscellaneous/railwayapp/: .gitignore  README.md  codegen.ts  package.json  tailwind.config.ts
miscellaneous/remix-jokes/: package.json  pnpm-lock.yaml
miscellaneous/scheduled_tweets/: Gemfile  NOT_my_database
miscellaneous/taskbox/: package.json
miscellaneous/understanding-typescript/: index.html  package-lock.json  package.json  tsconfig.json
miscellaneous/zero-sample/: .dockerignore  Caddyfile  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  package-lock.json  package.json  vite.config.ts
rust/actix_example/: .env  Cargo.toml
rust/actix_example/migrations/2022-01-14-170934_create_users_table/: up.sql
rust/actix_example/src/: actions.rs  main.rs
rust/adder/: Cargo.toml
rust/blockchain/: Cargo.toml
rust/blockchain/src/: blockchain.rs  main.rs
rust/chat/: README.md
rust/exercises/: Cargo.toml  pyproject.toml
rust/exercises/.cargo/: config.toml
rust/exercises/probabilities/: question1.ipynb
rust/exercises/probabilities/aug/31/: question3.ipynb
rust/exercises/probabilities/sep/: mini-project.ipynb
rust/exercises/probabilities/sep/14/: question1.py
rust/exercises/probabilities/sep/7/: input.txt  question1.py  question2.py
rust/exercises/src/: fibonacci.py  fibonacci.rs  main.rs  temperature.rs
rust/grrs/: Cargo.toml  README.md
rust/guessing_game/: Cargo.toml
rust/hangman/: Cargo.toml  info.txt
rust/hangman/.cargo/: config.toml
rust/hangman/src/: hangman.rs  main.rs  utils.rs
rust/hello-world/: Cargo.toml  main
rust/ip_sniffer/: Cargo.toml
rust/link_crawler/: Cargo.toml
rust/minigrep/: Cargo.toml  README.md
rust/snake/: Cargo.toml  README.md
rust/web_api/: Cargo.toml
sentiment-analysis/: .gitignore  clean-data.py  pyproject.toml
sentiment-analysis/output/: fourth.html  third.html
sentiment-analysis/sentiment_analysis/: first.py  fourth.ipynb  main.py  second.py  third.ipynb
sentiment-analysis/sentiment_analysis/data/: fourth.csv
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
ui-ux-practice/: README.md
ui-ux-practice/Krunch/: README.md  Vagrantfile  details.json  jsconfig.json  nuxt.config.js  package.json
ui-ux-practice/Nintendo/: README.md  nuxt.config.js
ui-ux-practice/car-manager/: .env  .graphqlrc.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
ui-ux-practice/discord-clone/: README.md  Vagrantfile  nuxt.config.js  package.json  tailwind.config.js  utils.js
ui-ux-practice/password-generator/: README.md  nuxt.config.js  package.json  tailwind.config.js
ui-ux-practice/scripts/: new-project
ui-ux-practice/spotify-clone/: README.md  nuxt.config.js  package.json  tailwind.config.js
(+287 files in other folders)
