[tool.poetry]
name = "daily-practice"
version = "0.1.0"
description = "My attempts for different question from websites like Project-Euler and SPOJ etc"
authors = ["IgnisDa <ignisda2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
commitizen = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
