[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = "A repository to contain the code for things I am learning"
authors = ["IgnisDa <ignisda2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"
pandoc = "^1.0.2"
matplotlib = "^3.3.3"
pandas = "^1.3.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
commitizen = "^2.11.1"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
