[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Diptesh Choudhuri <ignisda2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.5"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = {version = "^3.8.4", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
