[package]
name = "blockchain"
version = "0.1.0"
authors = ["Diptesh Choudhuri <diptesh.choudhuri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
