[tool.poetry]
name = "exercises"
version = "0.1.0"
description = ""
authors = ["IgnisDa <ignisda2001@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
jupyterlab = "^3.1.9"
plotly = "^5.3.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
