[package]
name = "hangman"
version = "0.1.0"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3" # Random number generators and other randomness functionality.
colored = "2.0.0"  # The most simple way to add colors in your terminal
